Fixed image overflow, increased max-width and height

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,14 +67,17 @@ h6 {
 
 /*********************** recipe cards */
 .recipe-card .card {
-    max-width: 300px;
+    max-width: 400px;
     border-radius: 9px;
     box-shadow: 0 .5rem 1.2rem 0 rgba(0, 0, 0, .2);
     margin-left: auto;
     margin-right: auto;
     transition: all 0.3s;
-    overflow: hidden;
+}
 
+.card .card-image {
+    position: relative;
+    overflow: hidden;
 }
 
 .recipe-card .card:hover {
@@ -84,12 +87,18 @@ h6 {
 
 .card-image img {
     transition: all 0.4s;
+    object-fit: cover;
+    height: 20rem;
 
 }
 
 .card-image img:hover {
     transform: scale(1.1);
 }
+
+/* .m6.recipe-card .card {
+    max-width: 400px;
+} */
 
 
 
@@ -202,7 +211,7 @@ h6 {
 
     .recipe-card .card-image img {
         width: 100%;
-        height: 18rem;
+        /* height: 18rem; */
         object-fit: cover;
     }
 
@@ -881,6 +890,8 @@ h6 {
         margin-left: 120px;
         margin-right: 120px;
     }
+
+    
 
     .recipes-row {
         margin-left: 100px;
